--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>We are just trying to use git and github, then hosting anf deployment</h3>
+    <p>I haave updated the work</p>
     
 </body>
 </html>
